--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+/* Google fonts import */
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@200;300;400;500;600;700&display=swap');
 /*Asterisk wildcard selector to override default styles added by the browser*/
 *{
     padding: 0;
@@ -12,11 +14,17 @@ body{
     flex-direction: column;
     /*Generic project styles*/
     color: #3a3a3a;
+    font-family: 'Lato', 'sans-serif';
 }
     /* Header */
 header {
 background-color: lightcoral;
 }
+
+h1{
+   font-family: 'Oswald', sans-serif; 
+}
+
 /* Main content */
 main{
     background-color: lightblue;
