--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,9 @@ position: fixed;
 z-index: 99;
 width: 100%;
 box-shadow: 0 2px 2px #3a3a3a;
+display: flex;
+justify-content: space-between;
+align-items: baseline;
 }
 
 header a {
@@ -43,7 +46,7 @@ h1{
     list-style-type: none;
 }
 
-menu > li {
+#menu > li {
     margin-bottom: 1em;
 }
 
@@ -60,12 +63,24 @@ nav{
     padding: 0 1rem;
     box-shadow: 0 2px 2px #3a3a3a;
     display: none;
+    top: 100%;
+}
+/*Nav toggle*/
+
+#nav-toggle:checked~nav{
+    display: block;
 }
 
+#nav-toggle{
+    display: none;
+}
+.nav-toggle-label{
+    font-size: 2rem;
+}
 /* Main content */
 main{
     background-color: lightblue;
-    /* make main element take up any surpius space to push footer down*/
+    /* make main element take up any surplus space to push footer down*/
     flex: 1 0 auto;
 }
 /* Footer */
