--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,3 +122,11 @@ footer{
         margin-top: 79px;
     }
 }
+
+/* Media query: laptops and desktops 992 and up */
+@media screen and (min-width: 992px){
+
+    #menu a:hover {
+        border-bottom: 1px solid #3a3a3a;
+    }
+}
