--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,12 @@ body{
     color: #3a3a3a;
     font-family: 'Lato', 'sans-serif';
 }
+h1, h2, h3 {
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #252525;
+}
     /* Header */
 header {
 background-color: #ffffff;
@@ -32,12 +38,6 @@ align-items: baseline;
 header a {
     text-decoration: none;
     color: inherit;
-}
-h1{
-   font-family: 'Oswald', sans-serif; 
-   text-transform: uppercase;
-   letter-spacing: 2px;
-   color: #252525;
 }
 
 #menu {
@@ -88,6 +88,22 @@ main{
     height: 600px;
     width: 100%;
     background: url("../images/hero-image.webp") no-repeat center center/cover;
+    position: relative;
+}
+#cover-text {
+   /*Final rgba value sets the opacity so it is semi-transparent*/ 
+   background-color: rgba(241, 109, 107, .7);
+   font-size: 130%;
+   position: absolute;
+   bottom: 30px;
+   width: 80%;
+   min-height: 200px;
+   padding-top: 40px;
+   padding-left: 10px;
+
+}
+#cover-text > h2, #cover-text > h3 {
+    color: #ffffff;
 }
 /* Footer */
 #social-networks {
@@ -135,6 +151,11 @@ main{
         /*Push Main content down to accomodate larger header*/
         margin-top: 79px;
     }
+        /*Hero*/
+        #cover-text {
+            width: 300px;
+            right: 50px;
+        }
 }
 
 /* Media query: laptops and desktops 992 and up */
