Increase gallery columns on larger screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -204,7 +204,13 @@ main {
     padding: 5%;
     color: #3a3a3a;
 }
-
+/*Media query: large or landscape phones(576px and up)*/
+@media screen and (min-width: 576px) {
+   #photos {
+    column-count: 2;
+    column-gap: 0;
+   } 
+}
 /* Media query: tablets and larger (768 and up) */
 @media screen and (min-width: 768px) {
     nav {
@@ -262,7 +268,10 @@ main {
         text-align: end;
         align-self: flex-end;
     }
-
+/*Gallery*/
+#photos {
+    column-count: 3;
+}
 
 }
 
@@ -271,6 +280,10 @@ main {
     #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
     }
+        /*Gallery*/
+        #photos {
+            column-count: 4;
+        }
 }
 
 /*Media query: large screens*/
