--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,8 @@ h3 {
     letter-spacing: 2px;
     color: #252525;
 }
-.hidden-heading{
+
+.hidden-heading {
     display: none;
 }
 
@@ -117,10 +118,12 @@ main {
     padding-top: 40px;
     padding-left: 10px;
 }
+
 #cover-text>h2,
 #cover-text>h3 {
     color: #ffffff;
 }
+
 /* Reasons section */
 #reasons {
     width: 90%;
@@ -163,15 +166,17 @@ main {
     align-items: center;
     justify-content: center;
 }
+
 /*Meetup section*/
 #times {
     background: url("../images/dublin-city.webp") no-repeat center/cover;
     display: flex;
     flex-wrap: wrap;
 }
+
 #times div {
     color: #fafafa;
-    background-color: rgba(0,0,0, .6);
+    background-color: rgba(0, 0, 0, .6);
     padding: 15px;
     text-align: center;
     /*This will not wrap on screens of less than 400px wide.
@@ -182,61 +187,67 @@ main {
     border: 2px solid white;
 
 }
+
 #times h3 {
     color: #fafafa;
 }
+
 /*Gallery page*/
 #photos img {
     width: 100%;
     line-height: 1em;
 }
-#photos{
+
+#photos {
     line-height: 0;
 }
+
 /*Sign up page*/
 #signup {
     background-image: url("../images/signup-image.webp");
     background-size: cover;
-        background-position: 75%;
-        padding: 20px 10% 0 10%;
-        flex-grow: 1;
-    }
-    
-    #signup-form {
-        color: #ffffff;
-        background-color: rgba(60, 60, 60, 0.6);
-        padding: 30px;
-    }
-    
-    #signup-form>h2 {
-        color: #fafafa;
-        margin-bottom: 20px;
-    }
-        .text-input {
-            background: transparent;
-            color: #fafafa;
-            width: 100%;
-            height: 25px;
-            margin: 5px 0 20px 0;
-            border: 1px solid #fafafa;
-            border-radius: 2px;
-            padding: 0 5px;
-        }
-    
-        .radio-buttons {
-            width: 100%;
-            display: flex;
-            justify-content: space-between;
-        }
-    
-        .join-button {
-            margin-top: 20px;
-            border-radius: 2px;
-            padding: 15px 32px;
-            font-size: 100%;
-            background-color: #454b1b;
-            color: #fafafa;
-        }
+    background-position: 75%;
+    padding: 20px 10% 0 10%;
+    flex-grow: 1;
+}
+
+#signup-form {
+    color: #ffffff;
+    background-color: rgba(60, 60, 60, 0.6);
+    padding: 30px;
+}
+
+#signup-form>h2 {
+    color: #fafafa;
+    margin-bottom: 20px;
+}
+
+.text-input {
+    background: transparent;
+    color: #fafafa;
+    width: 100%;
+    height: 25px;
+    margin: 5px 0 20px 0;
+    border: 1px solid #fafafa;
+    border-radius: 2px;
+    padding: 0 5px;
+}
+
+.radio-buttons {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.join-button {
+    margin-top: 20px;
+    border-radius: 2px;
+    padding: 15px 32px;
+    font-size: 100%;
+    background-color: #454b1b;
+    color: #fafafa;
+}
+
 /* Footer */
 #social-networks {
     text-align: center;
@@ -251,13 +262,15 @@ main {
     padding: 5%;
     color: #3a3a3a;
 }
+
 /*Media query: large or landscape phones(576px and up)*/
 @media screen and (min-width: 576px) {
-   #photos {
-    column-count: 2;
-    column-gap: 0;
-   } 
+    #photos {
+        column-count: 2;
+        column-gap: 0;
+    }
 }
+
 /* Media query: tablets and larger (768 and up) */
 @media screen and (min-width: 768px) {
     nav {
@@ -315,45 +328,48 @@ main {
         text-align: end;
         align-self: flex-end;
     }
-/*Gallery*/
-#photos {
-    column-count: 3;
-}
-/*sign up form*/
-/* Form */
-#signup {
-    background-position: center;
-    position: relative;
+
+    /*Gallery*/
+    #photos {
+        column-count: 3;
+    }
+
+    /*sign up form*/
+    /* Form */
+    #signup {
+        background-position: center;
+        position: relative;
+    }
+
+    #signup-form {
+        max-width: 400px;
+        position: absolute;
+        left: 10%;
+        top: 150px;
+    }
+
+    .text-input:hover {
+        border-color: #f16c6b;
+    }
+
+    .join-button:hover {
+        background-color: #fafafa;
+        color: #454b1b;
+    }
 }
 
-#signup-form {
-    max-width: 400px;
-    position: absolute;
-    left: 10%;
-    top: 150px;
-}
 
-.text-input:hover {
-    border-color: #f16c6b;
-}
-
-.join-button:hover {
-    background-color: #fafafa;
-    color: #454b1b;
-}
-}
-
-}
 
 /* Media query: laptops and desktops 992 and up */
 @media screen and (min-width: 992px) {
     #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
     }
-        /*Gallery*/
-        #photos {
-            column-count: 4;
-        }
+
+    /*Gallery*/
+    #photos {
+        column-count: 4;
+    }
 }
 
 /*Media query: large screens*/
